--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,24 @@
 spring.application.name=Skillplay
 
-server.port=8084
-server.servlet.context-path=/skill-play
-
-
-# database
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gamingarena77x@gmail.com
+spring.mail.password=kowtpqbgvynhywen
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/test33
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-
-#swagger
 springdoc.swagger-ui.path=/api-docs
 
+server.port=8084
+server.servlet.context-path=/skill-play
 
-
-default.minitoken.value= 100;
-minitoken.userReward = 500;
-
-
+minitoken.value=100
+minitoken.userReward=500
