--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.mail.password=kowtpqbgvynhywen
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.datasource.url=jdbc:mysql://localhost:3306/test33
+spring.datasource.url=jdbc:mysql://localhost:3306/test25
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -22,3 +22,10 @@ server.servlet.context-path=/skill-play
 
 minitoken.value=100
 minitoken.userReward=500
+
+
+#logger
+logging.file.name=logs/skill-play.log
+logging.file.max-size=100MB
+logging.file.max-history=7
+logging.level.root=info
