--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.14</version> <!-- For Base64 operations if you need Apache Commons -->
+		</dependency>
 	</dependencies>
 
 	<build>
