implemented spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=Skillplay
 server.servlet.context-path=/skill-play
 springdoc.swagger-ui.path=/api-docs
 
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=gamingarena77x@gmail.com
@@ -27,3 +28,11 @@ logging.file.name=logs/skill-play.log
 logging.file.max-size=100MB
 logging.file.max-history=7
 logging.level.root=info
+
+
+
+#security
+spring.security.user.name=tashi
+spring.security.user.password=tashi
+jwt.secret=SkillPlay-sec-key
+jwt.expiration=3600000  # Token expiration time in milliseconds (e.g., 1 hour)
